<resources>
    <string name="app_name">KSCY database</string>
    <string name="app_name_up">KSCY DATABASE</string>

    <string name="api_url">http://ec2-54-190-7-146.us-west-2.compute.amazonaws.com:5000/api/v1/</string>
    <string name="search_api_url">http://ec2-54-190-7-146.us-west-2.compute.amazonaws.com:8888/archive/</string>

    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="close_app">앱을 종료하시겠습니까?</string>

    <string name="login_failed">로그인에 실패했습니다.</string>
    <string name="logout_alert">로그아웃 하시겠습니까?</string>
    <string name="progress_login">로그인 중입니다..</string>
    <string name="load_failed">로딩에 실패했습니다.</string>
    <string name="delete_bookmark">북마크를 취소하시겠습니까?</string>

    <string name="search">SEARCH</string>
    <string name="bookmark">BOOKMARK</string>
    <string name="profile">PROFILE</string>
    <string name="logout">LOGOUT</string>
    <string name="settings">SETTINGS</string>

    <string name="org">학교명</string>
    <string name="author">저자</string>
    <string name="published_date">출판년</string>
    <string name="email">이메일</string>
    <string name="category">분류</string>
    <string name="abstract_kor">초록</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
